[gd_scene load_steps=2 format=3 uid="uid://bulb0fdqefvun"]

[ext_resource type="Script" path="res://Scripts/EndOfLevel.gd" id="1_wmvg0"]

[node name="EndOfLevel" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 1.0
offset_right = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_wmvg0")

[node name="WinLoseLabel" type="Label" parent="."]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -54.5
offset_top = 25.0
offset_right = 54.5
offset_bottom = 48.0
grow_horizontal = 2
text = "You Winnered"

[node name="CaptionLabel" type="Label" parent="."]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -237.0
offset_top = 62.0
offset_right = 237.0
offset_bottom = 85.0
grow_horizontal = 2
horizontal_alignment = 1
vertical_alignment = 1

[node name="GotoMainMenuButton" type="Button" parent="."]
layout_mode = 0
offset_left = 608.0
offset_top = 805.0
offset_right = 807.0
offset_bottom = 867.0
text = "Main Menu"

[node name="Timer" type="Timer" parent="."]
